[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"
default-run = "axum-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde_json = "1"

[profile.release]
lto = true
strip = true
